@@ -89,6 +89,9 @@ Core and builtins
 Library
 -------
 
+- Patch #1583880: fix tarfile's problems with long names and posix/
+  GNU modes.
+
 - Bug #1586448: the compiler module now emits the same bytecode for
   list comprehensions as the builtin compiler, using the LIST_APPEND
   opcode.
